--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^2.9.24",
-    "request": "^2.55.0"
+    "request": "^2.55.0",
+    "ws": "^0.7.1"
   },
   "devDependencies": {}
 }
