--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
     "bluebird": "^2.9.24",
     "request": "^2.55.0",
+    "underscore": "^1.8.3",
     "ws": "^0.7.1"
   },
   "devDependencies": {}
