--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "bluebird": "^2.9.24",
+    "ent": "^2.2.0",
     "request": "^2.55.0",
     "underscore": "^1.8.3",
     "ws": "^0.7.1"
